--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "cuid": "^2.1.8",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^5.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.0.1",
+    "redux": "^4.0.5",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2"
   },
@@ -33,6 +35,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.3"
+    "@types/react-router-dom": "^5.1.3",
+    "redux-devtools-extension": "^2.13.8"
   }
 }
